# klondike

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
crates/klondike/: Cargo.toml
crates/klondike-adapters/api-adapters/klondike-rest/: Cargo.toml
crates/klondike-adapters/api-adapters/klondike-rest/src/: artifacts.rs  channels.rs  issues.rs  lib.rs  posts.rs  threads.rs  users.rs
crates/klondike-adapters/storage-adapters/klondike-sqlite/: Cargo.toml
crates/klondike-adapters/storage-adapters/klondike-sqlite/migrations/: 001_init.sql  002_artifact_content.sql  003_users.sql
crates/klondike-adapters/storage-adapters/klondike-sqlite/src/: artifacts.rs  channels.rs  issues.rs  lib.rs  posts.rs  threads.rs  users.rs
crates/klondike-core/: Cargo.toml
crates/klondike-core/src/: artifacts.rs  channels.rs  error.rs  issues.rs  lib.rs  posts.rs  threads.rs  users.rs
crates/klondike-core/src/api/: artifacts_api.rs  channels_api.rs  issues_api.rs  mod.rs  posts_api.rs  threads_api.rs  users_api.rs
crates/klondike-core/src/storage/: artifacts_storage.rs  channels_storage.rs  issues_storage.rs  mod.rs  posts_storage.rs  threads_storage.rs  users_storage.rs
crates/klondike-server/: Cargo.toml
crates/klondike-server/src/: main.rs
crates/klondike-server/tests/: api_test.rs
crates/klondike/src/: lib.rs
crates/klondike/tests/: integration_test.rs
