[workspace]
resolver = "2"
members = [
    "crates/klondike-core",
    "crates/klondike-adapters/storage-adapters/klondike-sqlite",
    "crates/klondike-adapters/api-adapters/klondike-rest",
    "crates/klondike",
    "crates/klondike-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jonroebuck/klondike"

[workspace.dependencies]
klondike-core = { path = "crates/klondike-core" }
klondike-sqlite = { path = "crates/klondike-adapters/storage-adapters/klondike-sqlite" }
klondike-rest = { path = "crates/klondike-adapters/api-adapters/klondike-rest" }
klondike = { path = "crates/klondike" }

async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4", "serde"] }
