[package]
name = "klondike-core"
version = "0.1.0"
description = "Core traits and domain types for Klondike"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
