[package]
name = "klondike-server"
version = "0.1.0"
description = "Klondike server binary"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "klondike-server"
path = "src/main.rs"

[dependencies]
klondike.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http = "1"
klondike-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
uuid.workspace = true
